--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <body>
   <p>
-    Hello world
+    Welcome to the moon zone... <br>
+    I kind of just post my weird web coding projects here or discuss my other projects.
   </p>
 </body>
