Setting up first page for tools

--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
   <p>
     Welcome to the moon zone... <br>
     I kind of just post my weird web coding projects here or discuss my other projects.
+    <br>
+    <a href="./tools/csvToLatex.html">OWO a latex table generator</a>
   </p>
 </body>
