--- a/tools/csvToLatex.html
+++ b/tools/csvToLatex.html
@@ -1,13 +1,18 @@
 <html>
     <head>
+        <script src="./scripts/csvToLatex.js"></script>
 
     </head>
     <body>
         <h1>Insert your csv file</h1>
         <input type="textbox" id="csvInput">
-
+        <input type="button" onclick="parseTable()">
         <br>
         <br>
         <div id="latexOutput"></div>
     </body>
+
+
+
+    
 </html>
