--- a/tools/csvToLatex.html
+++ b/tools/csvToLatex.html
@@ -5,7 +5,10 @@
     </head>
     <body>
         <h1>Insert your csv file</h1>
-        <input type="textbox" id="csvInput">
+        <textarea id="csvInput">
+
+
+        </textarea>
         <input type="button" onclick="parseTable()">
         <br>
         <br>
