Cleaning out text area

--- a/tools/csvToLatex.html
+++ b/tools/csvToLatex.html
@@ -6,9 +6,8 @@
     <body>
         <h1>Insert your csv file</h1>
         <textarea id="csvInput">
-
-
-        </textarea>
+        </textarea><br>
+        
         <input type="button" onclick="parseTable()">
         <br>
         <br>
