--- a/tools/csvToLatex.html
+++ b/tools/csvToLatex.html
@@ -5,9 +5,8 @@
     </head>
     <body>
         <h1>Insert your csv file</h1>
-        <textarea id="csvInput">
-        </textarea><br>
-        
+        <textarea id="csvInput"></textarea><br>
+
         <input type="button" onclick="parseTable()">
         <br>
         <br>
