Adjusted index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
+<head>
+  <title>
+    Home
+  </title>
+</head>
+
 <body>
   <p>
-    Welcome to the moon zone... <br>
-    I kind of just post my weird web coding projects here or discuss my other projects.
-    <br>
-    <a href="./tools/csvToLatex.html">OWO a latex table generator</a>
+    Hello, this website is currently a work in progress. I will be updating 
+    this information as new projects come in. There will be a batch of projects 
+    upcoming.
   </p>
 </body>
