Updated my website.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,136 @@
 </head>
 
 <body>
+
+  <h1>CSS styling to come soon!</h1>
+
   <p>
-    Hello, this website is currently a work in progress. I will be updating 
-    this information as new projects come in. There will be a batch of projects 
-    upcoming.
+    Hello, I'm Kas, I'm a recent Computer Science Graduate, I enjoy programming. I got into programming from video games
+    I've always been interested in the code behind video games. A lot of my early interactions with computer science and
+    programming
+    were influenced by a goal I had in school to make a video game one day. I would first program in 2014 when I had
+    programming class at a local library. It was using Scratch however, I felt the visual based nature of Scratch added
+    a lot of extra
+    tedium. In 2015 I would take a Python programming course. After A few lessons I would attempt to learn Unity
+    however, I had not gone much
+    further besides some small python projects. I decided I wanted to be a Computer Scientist in 2019 when I took my
+    first computer science
+    course. We did a lot of programming in Python and I enjoyed the challenge it brought.
+
+    Unforantely, I don't have any of my old programming projects as they've been lost to time and only remember a few
+    and I hadn't
+    learned about git or github until 2021 and didnt use until a year later after I lost my final project for a C
+    programming course.
+
+
   </p>
+
+  <p>
+    Hello, I am Kas. I'm a recent Computer Science Graduate. I enjoy programming, a lot of my early reason why I wanted
+    to learn how to program was from video games.
+    I always thought the work that went to make them working was literal magic and I wanted to understand so I could do
+    it myself. Now with a Computer Science degree
+    I can definitely say, its still literal magic any of the games we have nowadays are playable. I started programming
+    in 2015 using Python, I wouldn't get too into
+    programming until 2019 when I took my first computer science class. While taking this class I enjoyed it enough to
+    decide I'd watnt to attend university for Computer Science. Unforantely I hadn't been using git or even github
+    to store code until 2022, all of my early projects had been lost to time. I don't remember most of them besides my
+    final projects of each class being the following.
+  <ul>
+    <li>A TUI calculator written in Python</li>
+    <li>A TUI aracade written in Python.</li>
+    <li>A TUI version of the game of life written in C.</li>
+  </ul>
+  </p>
+
+  <p>
+    My favorite programming language is python and I enjoy using it however, GDScript may overthrow its position due to
+    its python like nature and it being part of the game engine Godot. I'm proficent with C and Python programming and
+    have
+    a lot of expierence in Java. I'm familiar with JavaScript from my various website projects and Kotlin from my Kotlin
+    Compiler.
+  </p>
+
+  <h1>
+    Projects
+  </h1>
+
+  <div>
+    <h2>
+      Pizza Protocol
+    </h2>
+    Pizza protocol is my first game and is a game about programming. In Pizza Protocol you're tasked with making a
+    program
+    which is able to navigate a city to a target destination. You are given programming blocks and must program a
+    solution.
+    After you've programmed your solution you then run and watch what happens. The game uses a custom VPL (visual
+    programming language)
+    called Pizza Bytes. A nice feature about this game is that it can become a possible IDE so long as you
+    program the visuals, currently the game language is interpreted but you could turn this into a compiler as well
+    if you want. I may look into further support of Pizza Byte as a language as I think a compiled VPL language
+    is an interesting idea. This was my first expierence with Godot and the GDScript language.
+  </div>
+
+
+  <div>
+    <h2>K0</h2>
+    <p>
+      K0 is a kotlin toy compiler that targets x86. K0 was made using C, Bison, and FLEX. Perhaps my largest programming
+      project yet.
+      I worked as part of a three person team and made the compiler 4 months.
+    </p>
+  </div>
+
+
+  <div>
+    <h2>NeoBean</h2>
+    <p>
+      NeoBean is a college scheduling application for the University of New Mexico Tech as Tech leaves a desire for
+      better scheduling software.
+      This project started after Beanweb went down and students didn't have anything to use for a semester. This was my
+      first website and on this project
+      I worked on the web scrapper. The webscrapper was made in Python using beatutiful soup.
+    </p>
+  </div>
+
+  <div>
+    <h2>
+      Tomcat Donut Store
+    </h2>
+    <p>
+      Tomcat Donut Store is a website made using Apache Tomcat and JSP. The website interfaces with a sql database using
+      mysql connector. This was a five person project which was done over the course of two months. I took an active
+      role
+      in the development of the database and back end. In the last half of the project I would become the team lead
+      and ensure that the team was able to complete this project. The website is meant to act as a inventory manangement
+      and online store front for a fictional store.
+    </p>
+  </div>
+
+  <div>
+    <h2>
+      SouthernROCAireDales
+    </h2>
+    <p>
+      This is a website I built as a freelance project as a main page for a Airedale dog breeder. I developed this
+      website
+      using Python, flask, and Jinja Templates. This website interfaces with a SQL database using mysql connector. I was
+      working alone on
+      this project and I took the role of the developer and designer for the web page.
+    </p>
+  </div>
+
+  <div>
+    <h2>
+      Evil Cereal
+    </h2>
+    <p>
+      This is a video game that plays like overcooked the video game. It was made in less than 12 hours for the GMTK
+      2025 Game Jam after we decided to restart with a new idea which took up the previous 84 hours we had.
+      This game was developed using GDScript in the Godot engine. In this game you are working at a cereal shop where
+      you must serve cereal to your
+      customers. For this game I would handle the programming and had a team member who handled the art.
+    </p>
+  </div>
+
 </body>
