removed a repeat section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     I've always been interested in the code behind video games. A lot of my early interactions with computer science and
     programming
     were influenced by a goal I had in school to make a video game one day. I would first program in 2014 when I had
+    taken an video game
     programming class at a local library. It was using Scratch however, I felt the visual based nature of Scratch added
     a lot of extra
     tedium. In 2015 I would take a Python programming course. After A few lessons I would attempt to learn Unity
@@ -29,23 +30,6 @@
 
   </p>
 
-  <p>
-    Hello, I am Kas. I'm a recent Computer Science Graduate. I enjoy programming, a lot of my early reason why I wanted
-    to learn how to program was from video games.
-    I always thought the work that went to make them working was literal magic and I wanted to understand so I could do
-    it myself. Now with a Computer Science degree
-    I can definitely say, its still literal magic any of the games we have nowadays are playable. I started programming
-    in 2015 using Python, I wouldn't get too into
-    programming until 2019 when I took my first computer science class. While taking this class I enjoyed it enough to
-    decide I'd watnt to attend university for Computer Science. Unforantely I hadn't been using git or even github
-    to store code until 2022, all of my early projects had been lost to time. I don't remember most of them besides my
-    final projects of each class being the following.
-  <ul>
-    <li>A TUI calculator written in Python</li>
-    <li>A TUI aracade written in Python.</li>
-    <li>A TUI version of the game of life written in C.</li>
-  </ul>
-  </p>
 
   <p>
     My favorite programming language is python and I enjoy using it however, GDScript may overthrow its position due to
